src/test/resources/private/typechecking/fail/double_decl/fail03_methodParamDouble.jova
class Helper {

}

class Test {
    private int func(int a, string a, bool a, float a, char a, Helper a){
        return 0;
    }
}